--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,5 +1,6 @@
 galaxy_info:
   role_name: ssh_server
+  namespace: oxivanisher
   author: Marc Urben
   description: Configure SSH server
   company: Thunderbluff
