--- a/tasks/rpi.yml
+++ b/tasks/rpi.yml
@@ -1,10 +1,10 @@
 ---
 
-- name: looking up users
+- name: Looking up users
   ansible.builtin.getent:
     database: passwd
 
-- name: "add authorized keys for user pi"
+- name: "Add authorized keys for user pi"
   ansible.posix.authorized_key:
     user: "pi"
     state: present
@@ -12,7 +12,7 @@
   loop: "{{ ssh_keys_to_add }}"
   when: "'pi' in ansible_facts.getent_passwd"
 
-- name: "remove authorized keys for user pi"
+- name: "Remove authorized keys for user pi"
   ansible.posix.authorized_key:
     user: "pi"
     state: absent
@@ -20,7 +20,7 @@
   loop: "{{ ssh_keys_to_remove }}"
   when: "'pi' in ansible_facts.getent_passwd"
 
-- name: "add authorized keys for user xbian"
+- name: "Add authorized keys for user xbian"
   ansible.posix.authorized_key:
     user: "xbian"
     state: present
@@ -28,7 +28,7 @@
   loop: "{{ ssh_keys_to_add }}"
   when: "'xbian' in ansible_facts.getent_passwd"
 
-- name: "remove authorized keys for user xbian"
+- name: "Remove authorized keys for user xbian"
   ansible.posix.authorized_key:
     user: "xbian"
     state: absent
