Remove dependencies again, will be handled by the collection

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -51,7 +51,6 @@ galaxy_info:
   galaxy_tags:
     - ssh
 
-dependencies: []
-
-collections:
-  - ansible.posix
+dependencies:
+  []
+  # - role: ansible.posix.authorized_key
