--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -2,5 +2,7 @@
 
 - name: Restart ssh-server
   ansible.builtin.service:
-    name: "ssh"
+    name: ssh
     state: restarted
+  become: true
+  become_user: root
