--- a/tasks/rpi.yml
+++ b/tasks/rpi.yml
@@ -11,6 +11,8 @@
     key: '{{ item }}'
   loop: "{{ ssh_keys_to_add }}"
   when: "'pi' in ansible_facts.getent_passwd"
+  become: true
+  become_user: root
 
 - name: "Remove authorized keys for user pi"
   ansible.posix.authorized_key:
@@ -19,6 +21,8 @@
     key: '{{ item }}'
   loop: "{{ ssh_keys_to_remove }}"
   when: "'pi' in ansible_facts.getent_passwd"
+  become: true
+  become_user: root
 
 - name: "Add authorized keys for user xbian"
   ansible.posix.authorized_key:
@@ -27,6 +31,8 @@
     key: '{{ item }}'
   loop: "{{ ssh_keys_to_add }}"
   when: "'xbian' in ansible_facts.getent_passwd"
+  become: true
+  become_user: root
 
 - name: "Remove authorized keys for user xbian"
   ansible.posix.authorized_key:
@@ -35,3 +41,5 @@
     key: '{{ item }}'
   loop: "{{ ssh_keys_to_remove }}"
   when: "'xbian' in ansible_facts.getent_passwd"
+  become: true
+  become_user: root
