--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -7,9 +7,17 @@ jobs:
     runs-on: ubuntu-latest
     name: ansible-lint
     steps:
-      - uses: actions/checkout@master
-      - uses: actions/setup-python@v2
-      - run: pip install ansible ansible-lint
-      - run: ansible-lint --version
-      - run: ansible-lint --show-relpath .
+      - name: Checkout repo
+        uses: actions/checkout@master
 
+      - name: Setup python for ansible
+        uses: actions/setup-python@v5
+
+      - name: Install ansible and ansible-lint
+        run: pip install ansible ansible-lint
+
+      - name: Show ansible-lint version
+        run: ansible-lint --version
+
+      - name: Run ansible-lint
+        run: ansible-lint --show-relpath .
