--- a/.github/workflows/ansible-lint.yml
+++ b/.github/workflows/ansible-lint.yml
@@ -10,13 +10,15 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@master
 
-      - name: Setup python for ansible
+      - name: Install python for ansible
         uses: actions/setup-python@v5
+        with:
+          python-version: '3.12'
 
       - name: Install ansible and ansible-lint
         run: pip install ansible ansible-lint
 
-      - name: Show ansible-lint version
+      - name: Check ansible-lint version
         run: ansible-lint --version
 
       - name: Run ansible-lint
