--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -23,6 +23,7 @@
     dest: "/etc/ssh/sshd_config"
     regexp: '(^{{ item }} .*)'
     line: '# \1'
+    backrefs: yes
     validate: /usr/sbin/sshd -tf %s
   loop: "{{ ssh_server_comment_options }}"
   notify: Restart ssh-server
